kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacyadmin-web
  labels:
    app: legacyadmin
    component: web
spec:
  selector:
    app: legacyadmin
    component: web
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
